// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: Table regular table 1`] = `
.c0 {
  max-width: 100%;
  overflow-x: auto;
  margin: 0px 16px;
}

.c2.c2.c2.c2.c2 th,
.c2.c2.c2.c2.c2 td {
  text-transform: uppercase;
  border: 1px solid hsl(200,96%,11%);
  background-color: hsl(200,96%,11%);
  color: hsl(0,0%,100%);
}

.c3 {
  text-align: left;
  padding: 16px;
  min-width: calc(160px * 0.7125);
}

.c1 {
  border-spacing: 0;
  color: hsl(200,10%,20%);
  font-size: 15px;
  line-height: 23px;
}

.c1 th {
  font-weight: bold;
}

.c1 td,
.c1 th {
  background-color: hsl(0,0%,100%);
  border-top: 1px solid transparent;
  border-bottom: 1px solid transparent;
}

.c1 td:first-child,
.c1 th:first-child {
  border-left: 1px solid hsl(200,29%,90%);
}

.c1 td:last-child,
.c1 th:last-child {
  border-right: 1px solid hsl(200,29%,90%);
}

.c1 tr:nth-of-type(even) td,
.c1 tr:nth-of-type(even) th {
  background-color: hsl(200,29%,90%);
}

.c1.c1.c1 tr:hover {
  cursor: pointer;
}

.c1.c1.c1 tr:hover th,
.c1.c1.c1 tr:hover td {
  border-color: hsl(200,96%,35%);
}

.c1.c1.c1 tr:focus {
  outline: 0;
}

.c1.c1.c1 tr:focus td,
.c1.c1.c1 tr:focus th {
  background-color: hsla(200,96%,35%,0.25);
  border-color: hsl(200,96%,35%);
}

.c1 > tr:first-of-type th,
.c1 tbody > tr:first-child th,
.c1 thead > tr:first-child th,
.c1 > tr:first-of-type td,
.c1 tbody > tr:first-child td,
.c1 thead > tr:first-child td {
  border-top-color: hsl(200,29%,90%);
}

.c1 > tr:first-of-type th:first-child,
.c1 tbody > tr:first-child th:first-child,
.c1 thead > tr:first-child th:first-child,
.c1 > tr:first-of-type td:first-child,
.c1 tbody > tr:first-child td:first-child,
.c1 thead > tr:first-child td:first-child {
  border-top-left-radius: 8px;
}

.c1 > tr:first-of-type th:last-child,
.c1 tbody > tr:first-child th:last-child,
.c1 thead > tr:first-child th:last-child,
.c1 > tr:first-of-type td:last-child,
.c1 tbody > tr:first-child td:last-child,
.c1 thead > tr:first-child td:last-child {
  border-top-right-radius: 8px;
}

.c1.c1 > thead + tr:first-of-type th,
.c1.c1 > thead + tbody > tr:first-child th,
.c1.c1 > thead + tr:first-of-type td,
.c1.c1 > thead + tbody > tr:first-child td {
  border-top-color: transparent;
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
}

.c1 > tr:last-child th,
.c1 tbody:last-child > tr:last-child th,
.c1 thead:last-child > tr:last-child th,
.c1 tfoot:last-child > tr:last-child th,
.c1 > tr:last-child td,
.c1 tbody:last-child > tr:last-child td,
.c1 thead:last-child > tr:last-child td,
.c1 tfoot:last-child > tr:last-child td {
  border-bottom-color: hsl(200,29%,90%);
}

.c1 > tr:last-child th:first-child,
.c1 tbody:last-child > tr:last-child th:first-child,
.c1 thead:last-child > tr:last-child th:first-child,
.c1 tfoot:last-child > tr:last-child th:first-child,
.c1 > tr:last-child td:first-child,
.c1 tbody:last-child > tr:last-child td:first-child,
.c1 thead:last-child > tr:last-child td:first-child,
.c1 tfoot:last-child > tr:last-child td:first-child {
  border-bottom-left-radius: 8px;
}

.c1 > tr:last-child th:last-child,
.c1 tbody:last-child > tr:last-child th:last-child,
.c1 thead:last-child > tr:last-child th:last-child,
.c1 tfoot:last-child > tr:last-child th:last-child,
.c1 > tr:last-child td:last-child,
.c1 tbody:last-child > tr:last-child td:last-child,
.c1 thead:last-child > tr:last-child td:last-child,
.c1 tfoot:last-child > tr:last-child td:last-child {
  border-bottom-right-radius: 8px;
}

@media screen and (min-width:1200px) {
  .c3 {
    min-width: calc(160px * 0.875);
  }
}

@media screen and (min-width:1440px) {
  .c3 {
    min-width: 160px;
  }
}

<div>
  <div
    class="c0"
  >
    <table
      class="c1"
    >
      <thead
        class="c2"
      >
        <tr
          class=""
          tabindex="0"
        >
          <th
            class="c3"
          >
            Header Cell
          </th>
        </tr>
      </thead>
      <tbody
        class=""
      >
        <tr
          class=""
          tabindex="0"
        >
          <td
            class="c3"
          >
            Data cell
          </td>
        </tr>
        <tr
          class=""
          tabindex="0"
        >
          <td
            class="c3"
          >
            Data cell
          </td>
        </tr>
        <tr
          class=""
          tabindex="0"
        >
          <td
            class="c3"
          >
            Data cell
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`component: Table table with caption 1`] = `
.c0 {
  max-width: 100%;
  overflow-x: auto;
  margin: 0px 16px;
}

.c2.c2.c2.c2.c2 th,
.c2.c2.c2.c2.c2 td {
  text-transform: uppercase;
  border: 1px solid hsl(200,96%,11%);
  background-color: hsl(200,96%,11%);
  color: hsl(0,0%,100%);
}

.c3 {
  text-align: left;
  padding: 16px;
  min-width: calc(160px * 0.7125);
}

.c1 {
  border-spacing: 0;
  color: hsl(200,10%,20%);
  font-size: 15px;
  line-height: 23px;
}

.c1 th {
  font-weight: bold;
}

.c1 td,
.c1 th {
  background-color: hsl(0,0%,100%);
  border-top: 1px solid transparent;
  border-bottom: 1px solid transparent;
}

.c1 td:first-child,
.c1 th:first-child {
  border-left: 1px solid hsl(200,29%,90%);
}

.c1 td:last-child,
.c1 th:last-child {
  border-right: 1px solid hsl(200,29%,90%);
}

.c1 tr:nth-of-type(even) td,
.c1 tr:nth-of-type(even) th {
  background-color: hsl(200,29%,90%);
}

.c1.c1.c1 tr:hover {
  cursor: pointer;
}

.c1.c1.c1 tr:hover th,
.c1.c1.c1 tr:hover td {
  border-color: hsl(200,96%,35%);
}

.c1.c1.c1 tr:focus {
  outline: 0;
}

.c1.c1.c1 tr:focus td,
.c1.c1.c1 tr:focus th {
  background-color: hsla(200,96%,35%,0.25);
  border-color: hsl(200,96%,35%);
}

.c1 > tr:first-of-type th,
.c1 tbody > tr:first-child th,
.c1 thead > tr:first-child th,
.c1 > tr:first-of-type td,
.c1 tbody > tr:first-child td,
.c1 thead > tr:first-child td {
  border-top-color: hsl(200,29%,90%);
}

.c1 > tr:first-of-type th:first-child,
.c1 tbody > tr:first-child th:first-child,
.c1 thead > tr:first-child th:first-child,
.c1 > tr:first-of-type td:first-child,
.c1 tbody > tr:first-child td:first-child,
.c1 thead > tr:first-child td:first-child {
  border-top-left-radius: 8px;
}

.c1 > tr:first-of-type th:last-child,
.c1 tbody > tr:first-child th:last-child,
.c1 thead > tr:first-child th:last-child,
.c1 > tr:first-of-type td:last-child,
.c1 tbody > tr:first-child td:last-child,
.c1 thead > tr:first-child td:last-child {
  border-top-right-radius: 8px;
}

.c1.c1 > thead + tr:first-of-type th,
.c1.c1 > thead + tbody > tr:first-child th,
.c1.c1 > thead + tr:first-of-type td,
.c1.c1 > thead + tbody > tr:first-child td {
  border-top-color: transparent;
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
}

.c1 > tr:last-child th,
.c1 tbody:last-child > tr:last-child th,
.c1 thead:last-child > tr:last-child th,
.c1 tfoot:last-child > tr:last-child th,
.c1 > tr:last-child td,
.c1 tbody:last-child > tr:last-child td,
.c1 thead:last-child > tr:last-child td,
.c1 tfoot:last-child > tr:last-child td {
  border-bottom-color: hsl(200,29%,90%);
}

.c1 > tr:last-child th:first-child,
.c1 tbody:last-child > tr:last-child th:first-child,
.c1 thead:last-child > tr:last-child th:first-child,
.c1 tfoot:last-child > tr:last-child th:first-child,
.c1 > tr:last-child td:first-child,
.c1 tbody:last-child > tr:last-child td:first-child,
.c1 thead:last-child > tr:last-child td:first-child,
.c1 tfoot:last-child > tr:last-child td:first-child {
  border-bottom-left-radius: 8px;
}

.c1 > tr:last-child th:last-child,
.c1 tbody:last-child > tr:last-child th:last-child,
.c1 thead:last-child > tr:last-child th:last-child,
.c1 tfoot:last-child > tr:last-child th:last-child,
.c1 > tr:last-child td:last-child,
.c1 tbody:last-child > tr:last-child td:last-child,
.c1 thead:last-child > tr:last-child td:last-child,
.c1 tfoot:last-child > tr:last-child td:last-child {
  border-bottom-right-radius: 8px;
}

@media screen and (min-width:1200px) {
  .c3 {
    min-width: calc(160px * 0.875);
  }
}

@media screen and (min-width:1440px) {
  .c3 {
    min-width: 160px;
  }
}

<div>
  <div
    class="c0"
  >
    <table
      class="c1"
    >
      <caption>
        I'm a caption
      </caption>
      <thead
        class="c2"
      >
        <tr
          class=""
          tabindex="0"
        >
          <th
            class="c3"
          >
            Header Cell
          </th>
        </tr>
      </thead>
      <tbody
        class=""
      >
        <tr
          class=""
          tabindex="0"
        >
          <td
            class="c3"
          >
            Data cell
          </td>
        </tr>
        <tr
          class=""
          tabindex="0"
        >
          <td
            class="c3"
          >
            Data cell
          </td>
        </tr>
        <tr
          class=""
          tabindex="0"
        >
          <td
            class="c3"
          >
            Data cell
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`component: Table table with no header 1`] = `
.c0 {
  max-width: 100%;
  overflow-x: auto;
  margin: 0px 16px;
}

.c2 {
  text-align: left;
  padding: 16px;
  min-width: calc(160px * 0.7125);
}

.c1 {
  border-spacing: 0;
  color: hsl(200,10%,20%);
  font-size: 15px;
  line-height: 23px;
}

.c1 th {
  font-weight: bold;
}

.c1 td,
.c1 th {
  background-color: hsl(0,0%,100%);
  border-top: 1px solid transparent;
  border-bottom: 1px solid transparent;
}

.c1 td:first-child,
.c1 th:first-child {
  border-left: 1px solid hsl(200,29%,90%);
}

.c1 td:last-child,
.c1 th:last-child {
  border-right: 1px solid hsl(200,29%,90%);
}

.c1 tr:nth-of-type(even) td,
.c1 tr:nth-of-type(even) th {
  background-color: hsl(200,29%,90%);
}

.c1.c1.c1 tr:hover {
  cursor: pointer;
}

.c1.c1.c1 tr:hover th,
.c1.c1.c1 tr:hover td {
  border-color: hsl(200,96%,35%);
}

.c1.c1.c1 tr:focus {
  outline: 0;
}

.c1.c1.c1 tr:focus td,
.c1.c1.c1 tr:focus th {
  background-color: hsla(200,96%,35%,0.25);
  border-color: hsl(200,96%,35%);
}

.c1 > tr:first-of-type th,
.c1 tbody > tr:first-child th,
.c1 thead > tr:first-child th,
.c1 > tr:first-of-type td,
.c1 tbody > tr:first-child td,
.c1 thead > tr:first-child td {
  border-top-color: hsl(200,29%,90%);
}

.c1 > tr:first-of-type th:first-child,
.c1 tbody > tr:first-child th:first-child,
.c1 thead > tr:first-child th:first-child,
.c1 > tr:first-of-type td:first-child,
.c1 tbody > tr:first-child td:first-child,
.c1 thead > tr:first-child td:first-child {
  border-top-left-radius: 8px;
}

.c1 > tr:first-of-type th:last-child,
.c1 tbody > tr:first-child th:last-child,
.c1 thead > tr:first-child th:last-child,
.c1 > tr:first-of-type td:last-child,
.c1 tbody > tr:first-child td:last-child,
.c1 thead > tr:first-child td:last-child {
  border-top-right-radius: 8px;
}

.c1.c1 > thead + tr:first-of-type th,
.c1.c1 > thead + tbody > tr:first-child th,
.c1.c1 > thead + tr:first-of-type td,
.c1.c1 > thead + tbody > tr:first-child td {
  border-top-color: transparent;
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
}

.c1 > tr:last-child th,
.c1 tbody:last-child > tr:last-child th,
.c1 thead:last-child > tr:last-child th,
.c1 tfoot:last-child > tr:last-child th,
.c1 > tr:last-child td,
.c1 tbody:last-child > tr:last-child td,
.c1 thead:last-child > tr:last-child td,
.c1 tfoot:last-child > tr:last-child td {
  border-bottom-color: hsl(200,29%,90%);
}

.c1 > tr:last-child th:first-child,
.c1 tbody:last-child > tr:last-child th:first-child,
.c1 thead:last-child > tr:last-child th:first-child,
.c1 tfoot:last-child > tr:last-child th:first-child,
.c1 > tr:last-child td:first-child,
.c1 tbody:last-child > tr:last-child td:first-child,
.c1 thead:last-child > tr:last-child td:first-child,
.c1 tfoot:last-child > tr:last-child td:first-child {
  border-bottom-left-radius: 8px;
}

.c1 > tr:last-child th:last-child,
.c1 tbody:last-child > tr:last-child th:last-child,
.c1 thead:last-child > tr:last-child th:last-child,
.c1 tfoot:last-child > tr:last-child th:last-child,
.c1 > tr:last-child td:last-child,
.c1 tbody:last-child > tr:last-child td:last-child,
.c1 thead:last-child > tr:last-child td:last-child,
.c1 tfoot:last-child > tr:last-child td:last-child {
  border-bottom-right-radius: 8px;
}

@media screen and (min-width:1200px) {
  .c2 {
    min-width: calc(160px * 0.875);
  }
}

@media screen and (min-width:1440px) {
  .c2 {
    min-width: 160px;
  }
}

<div>
  <div
    class="c0"
  >
    <table
      class="c1"
    >
      <tbody
        class=""
      >
        <tr
          class=""
          tabindex="0"
        >
          <td
            class="c2"
          >
            Data cell
          </td>
        </tr>
        <tr
          class=""
          tabindex="0"
        >
          <td
            class="c2"
          >
            Data cell
          </td>
        </tr>
        <tr
          class=""
          tabindex="0"
        >
          <td
            class="c2"
          >
            Data cell
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
